[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Settings.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 757.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.04
alignment = 1

[node name="Settings" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 505.0
margin_bottom = 244.0
size_flags_vertical = 0
text = "Settings

"
autowrap = true

[node name="DeleteAccountLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 505.0
margin_bottom = 279.0
size_flags_vertical = 0
text = "To delete your account, type \"DELETE\" below, and press the delete button.
WARNING: This deletes all related data permanently, this is not reversible."
autowrap = true

[node name="DeleteAccountInput" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 505.0
margin_bottom = 307.0

[node name="DeleteAccountButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 311.0
margin_right = 505.0
margin_bottom = 331.0
text = "Delete account permanently"

[node name="Log" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 505.0
margin_bottom = 366.0
size_flags_vertical = 0
text = "
"
autowrap = true

[node name="BackButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 505.0
margin_bottom = 390.0
text = "Back"

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/DeleteAccountButton" to="." method="_on_DeleteAccountButton_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
